--- a/style.css
+++ b/style.css
@@ -48,11 +48,67 @@
 }
 .leftBox .detail {
   margin-left: 20px;
+  font-size: 15px;
+  line-height: 25px;
 }
 .leftBox .but {
   margin-left: 20px;
+  margin-top: 30px;
+  font-size: 10px;
   background-color: #ff3147;
-  padding: 7px 20px;
+  padding: 11px 25px;
   border: none;
   color: white;
+}
+
+/* box 2 */
+
+.box2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  /* background-color: rgb(23, 88, 146); */
+}
+.box2 .top {
+  width: 60%;
+  height: 200px;
+  /* background-color: aqua; */
+}
+.box2 .bottom {
+  width: 100%;
+  height: 200px;
+}
+.top .topLeft {
+  /* height: 50%; */
+  color: #ff3147;
+  margin-left: 20px;
+}
+.innerBot {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.innerBot .left {
+  line-height: 40px;
+  width: 40%;
+  margin-left: 20px;
+  font-size: 30px;
+  font-weight: 600;
+}
+.innerBot .right {
+  width: 60%;
+  padding-left: 50px;
+  height: 100%;
+  line-height: 20px;
+  font-size: 15px;
+  /* background-color: aqua; */
+}
+.box2 .bottom {
+  width: 100%;
+  height: 800px;
+  background-color: aquamarine;
 }
